# UUP

dinamicke strukture (liste i binarna stabla)/banka/: CMakeLists.txt  main.c
dinamicke strukture (liste i binarna stabla)/bebe/: main.c
dinamicke strukture (liste i binarna stabla)/dijeta/: CMakeLists.txt  main.c
dinamicke strukture (liste i binarna stabla)/ocene/: main.c
dinamicke strukture (liste i binarna stabla)/ocene2/: CMakeLists.txt  main.c
dinamicke strukture (liste i binarna stabla)/osobe/: CMakeLists.txt  main.c
dinamicke strukture (liste i binarna stabla)/prodavnica/: main.c
dinamicke strukture (liste i binarna stabla)/prodavnica2/: CMakeLists.txt  Februar_21_G2_Utakmice.c  main.c
dinamicke strukture (liste i binarna stabla)/student/: main.c  zad.txt
dinamicke strukture (liste i binarna stabla)/temperatura/: CMakeLists.txt  main.c
dinamicke strukture (liste i binarna stabla)/teretana/: CMakeLists.txt  main.c
dinamicke strukture (liste i binarna stabla)/trke/: CMakeLists.txt  main.c
dinamicke strukture (liste i binarna stabla)/utakmice/: CMakeLists.txt  (+1 more)
funckije/: 10.c  12.c  14.c  15.c  16.c  17.c  19.c  20.c  21.c  22.c  24.c  3.c  32.c  4.c  5.c  6.c  7.c  8.c  9.c  ibzaci_vece_cifre.c  tempCodeRunnerFile.c
paternovanje/: 25.c  26.c  28.c  29.c  29v2.c  crtanje_dijagonala.c  crtanje_dijagonala2.c  crtanje_trougla.c  k-ti_prost.c  kanister.c  klk.c  obrnuta_piramida.c  obrnuta_piramida2.c  opisan_kvadrat.c  opisan_kvadrat2.c  piramida.c  prost_broj.c  savrseni_broj.c  strelica.c  tablica_mnozenja.c  test.c  zaokruzeni_decimalni.c
(+10 files in other folders)
